# TestRender

./: CMakeLists.txt  README.md
RenderCore/: CMakeLists.txt
RenderCore/includes/Core/: Application.hpp  Camera.hpp
RenderCore/includes/Core/ApplicationWindow/: WindowBase.hpp  WindowOpenGL.hpp
RenderCore/includes/Core/Rendering/OpenGL/: IndexBuffer.hpp  Renderer.hpp  ShaderProgram.hpp  Texture2D.hpp  VertexArray.hpp  VertexBuffer.hpp
RenderCore/includes/Core/Resources/: ResourceManager.hpp
RenderCore/includes/Core/Utils/: Input.hpp  Keys.hpp  Log.hpp  WindowEvents.hpp
RenderCore/src/Core/: APPLICATION.CPP  Camera.cpp
RenderCore/src/Core/ApplicationWindow/: WindowBase.cpp  WindowOpenGL.cpp
RenderCore/src/Core/Rendering/OpenGL/: IndexBuffer.cpp  Renderer.cpp  ShaderProgram.cpp  Texture2D.cpp  VertexArray.cpp  VertexBuffer.cpp
RenderCore/src/Core/Resources/: ResourceManager.cpp
RenderCore/src/Core/Utils/: Input.cpp
RenderEditor/: CMakeLists.txt
RenderEditor/src/: Main.cpp
